<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="18dp"
    android:paddingTop="18dp"
    android:background="@color/background_white"
    tools:context=".presentation.fragments.NoteFragment">


    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back"
        app:tint="?attr/colorPrimary"
        android:focusable="true" />


    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/btnDone"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_delete"
        app:tint="?attr/colorPrimary"/>

    <ImageView
        android:id="@+id/btnDone"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_done"
        android:focusable="true"
        app:tint="?attr/colorPrimary" />


    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:hint="@string/note_title"
        android:inputType="text"
        android:textColor="?attr/noteTextColor"
        android:textColorHint="?attr/noteTextColor"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/currentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_hint"
        android:textColor="?attr/iconColor"
        app:layout_constraintTop_toBottomOf="@id/etNoteTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        />

    <EditText
        android:id="@+id/etNoteBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/start_text"
        android:inputType="textMultiLine"
        android:textColor="?attr/noteTextColor"
        android:textColorHint="?attr/iconColor"
        android:textSize="16sp"
        android:layout_marginEnd="18dp"
        app:layout_constraintTop_toBottomOf="@id/currentDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>