<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_frag"
    android:background="@color/background_white"
    tools:context=".presentation.fragments.HomeFragment">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginHorizontal="18dp"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/seacrhText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        app:startIconTint="?attr/iconColor"
        app:startIconDrawable="@drawable/ic_magnify"
        android:hint="@string/search"
        android:textColorHint="?attr/iconColor"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:textColor="?attr/noteTextColor"
            android:padding="10dp"
            android:inputType="textFilter"
            android:maxLines="1"
            android:background="@drawable/search_form"
            android:backgroundTint="?attr/hintBackgroundColor"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="9dp"
        app:layout_constraintTop_toBottomOf="@id/seacrhText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />
    </androidx.core.widget.NestedScrollView>

        <ImageView
            android:id="@+id/imvNotesNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvNoteNotFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/notes_not_found"
            android:textColor="?attr/iconColor"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/imvNotesNotFound"
            app:layout_constraintStart_toStartOf="@id/imvNotesNotFound"
            app:layout_constraintEnd_toEndOf="@id/imvNotesNotFound"
            />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="?attr/colorPrimary"
        android:clickable="true"
        android:tintMode="?attr/colorOnPrimary"
        app:borderWidth="0dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>